- set min-width on longscroll v2 to prevent horizontal squishing

--- a/themes/starterkit/css/layouts/longscroll_v2/longscroll_v2.layout.no-query.css
+++ b/themes/starterkit/css/layouts/longscroll_v2/longscroll_v2.layout.no-query.css
@@ -52,7 +52,7 @@ html body {
       max-width: 100%;
       min-height: 100%;
       margin: auto;
-      min-width: 100%; }
+      min-width: 1000px; }
     html body .backgrounds div.b1 {
       display: block; }
   html body.a2 .backgrounds .b2 {
