--- a/themes/starterkit/sass/layouts/longscroll_v2/longscroll_v2.layout.scss
+++ b/themes/starterkit/sass/layouts/longscroll_v2/longscroll_v2.layout.scss
@@ -75,7 +75,7 @@ html{
 					max-width: 100%;
 					min-height:100%;
 					margin:auto;
-					min-width:100%;
+					min-width:1000px;
 				}
 				&.b1{
 					display:block;
